src/style/index.scss
@import "./variables.scss";
@import "~bootstrap/scss/bootstrap.scss";

$fa-font-path: "~font-awesome/fonts";
@import "~font-awesome/scss/font-awesome.scss";

body {
	margin-top: 56px;
}

#main-nav {
	padding: 2px 16px 0 16px;
	border-bottom: 3px solid $fond-sombre;
	.navbar-brand {
		padding: 0;
		img {
			height: 40px;
			width: 40px;
		}
		@media (max-width: 992px) {
			margin: auto;
		}
	}
	#main-nav-pills {
		.nav-link {
			padding: 4px 8px;
			&::hover {
				text-decoration: underline;
			}
		}
	}
	#main-nav-social {
		.nav-link {
			padding: 0 8px;
			&:hover {
				color: $primaire;
			}
		}
		@media (max-width: 992px) {
			display: none;
		}
	}
}

#side-nav {
	overflow: hidden;
	white-space: nowrap;
	display: none;
	position: fixed;
	height: 100%;
	top: 0;
	left: 0;
	padding-top: 80px;
	z-index: 1029;
	opacity: 0.9;
	&.collapsing {
	    -webkit-transition: none;
	    transition: none;
	    display: none;
	}
}


#side-nav-content {
	height: 100%;
}

#carousel {
	background: black;
	height: 70vmin;
	.carousel-control-prev, .carousel-control-next {
		background: $black;
		//background: rgba(0,0,0,0.5);
	}
	.carousel-item {
		height: 100%;
		overflow: hidden;
	}
	.carousel-button {
		z-index: 1030;
		position: absolute;
		left: 16%;
		bottom: 10%;
	}
	img {
		width: 100%;
		position: relative;
		top: 35vmin;
		transform: translateY(-50%);
	}
}

img.darker {
	filter: alpha(0.8);
}

img.darkest {
	filter: alpha(0.5);
}

.row.no-gutters{
	margin:0 -15px;
}

#map, #pres-video {
  iframe{
    width: 100%;
  }
}
#map iframe{
	height:100%;
	@media (max-width: 1200px) {
		min-height: 80vmin;
	}
}
#pres-video {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	iframe {
		height: 28.125vw;
		@media (max-width: 992px) {
			height: 56.25vw;
		}
	}
}


#concept {
	@media (max-width: 576px) {
		h1 {
			font-size: 2rem;
		}
		h5 {
			font-size: 1.5rem;
		}
		p {
			font-size: 1rem;
		}
	}
}

#evt {
	.img-wrap {
		background: black;
		border-radius: 10px;
		margin: auto;
		width: 200px;
		height: 120px;
		overflow: hidden;
	}
	img {
		width: 100%;
		height: auto;
	}
}
@media (max-width: 576px) {
	#activite h3 {
		font-size: 2rem;
	}
}

#acti {
	i {
		font-size: 6rem;
	}
}

#citations {
	img {
		height: 8rem;
	}
	@media (max-width: 576px) {
		h3 {
			font-size: 1.8rem;
		}
	}
}

@media (max-width: 576px) {
	#partenaires h2 {
		font-size: 2rem;
	}
}

.partenaires-img {
	min-height: 32vmin;
	margin-top: -30px;
	div{
		height: 100%
	}
	img {
		max-width: 70%;
		max-height: 100%;
		position: relative;
		top: 16vmin;
		transform: translateY(-50%);
	}
}

#tarifs {
	background: $white;
	img {
		width: 80%;
	}
	@media (max-width: 768px) {
		.display-4 {
			font-size: 3rem;
		}
	}
	@media (max-width: 576px) {
		.display-4 {
			font-size: 1.7rem;
		}
	}
}

.jumbotron {
	margin: 0;
}

#horaires {
	b {
		font-weight: 900;
	}
	@media (max-width: 768px) {
		.display-2 {
			font-size: 4rem;
		}
	}
	@media (max-width: 576px) {
		.display-2 {
			font-size: 2.1rem;
		}
		.display-4 {
			font-size: 1.7rem;
		}
		.display-5 {
			font-size: 1.3rem;
		}
	}
}

footer {
	padding: 1vh 0 5vh 0;
	border-top: 3px solid $fond-sombre;
	a {
		color: $black;
	}
	a:hover {
		color: $fond-alerte
	}
	#news-form {
		.no-group {
			display: none;
		}

		@media (max-width: 1200px) {
			.input-group {
				display: none;
			}
			.no-group {
				display: block;
				&.input-group {
					position: relative;
					.btn {
						position: absolute;
						left: 50%;
						transform: translateX(-50%);
					}
				}
			}
		}
		@media (max-width: 768px) {
			h3 {
				font-size: 1.8rem;
			}
		}
	}
}


.balloon {
	display: table;
	align-text: center;
	font-size: 1.2rem;
	margin: auto;
	padding: 20px;
    width: 250px;
    height: 150px;
    background: #fff;
    border-radius: 20px;
    position: relative;
    text-align: center;
}
span {
	display: table-cell;
	vertical-align: middle;
}
.balloon .tip {
    width: 0;
    height: 0;
    position: absolute;
    right: 120px;
    bottom: -20px;
    border: solid 10px;
    border-color: #fff transparent transparent transparent;
}

@media (min-width: 576px) {
	.md-hide {
		display: none;
	}
}
@media (max-width: 576px) {
	.sm-hide {
		display: none;
	}
}

